Chrome OS: Fix shutdown when PreMainMessageLoopRun is not called

ChromeBrowserMainParts::PreMainMessageLoopRunImpl() may return
early with chrome::RESULT_CODE_NORMAL_EXIT_PROCESS_NOTIFIED in
browser tests. This prevents PreProfileInit() and other stages
from getting called, but PostMainMessageLoopRun() is still
called, so the code needs to be careful about shutting down
singletons initialized in PostMainMessageLoopRun() stages.

Bug: 702403
Change-Id: Icfc7dd93da6f78a3ccaf4e207c720fe2073fc1db
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/1893376
Commit-Queue: Steven Bennetts <stevenjb@chromium.org>
Reviewed-by: James Cook <jamescook@chromium.org>
Reviewed-by: Mitsuru Oshima <oshima@chromium.org>
Reviewed-by: Xiyuan Xia <xiyuan@chromium.org>
Cr-Commit-Position: refs/heads/master@{#714566}

Former-commit-id: 7b991c5c81e3745ed734819b55690225a43675c0